--- a/http/index.html
+++ b/http/index.html
@@ -6,6 +6,6 @@
     <title>Node Tutorial</title>
 </head>
 <body>
-    <h1>Adewole Akinola</h1>
+    <h1>Hello {{name}}, welcome to Node class</h1>
 </body>
 </html>
